--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
@@ -23,7 +24,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^8.0.3",
     "prettier": "^2.4.1"
   },
@@ -33,14 +34,24 @@
       "node": true
     },
     "extends": [
+      "prettier",
       "plugin:vue/vue3-essential",
       "eslint:recommended",
       "plugin:prettier/recommended"
     ],
+    "plugins": [
+      "prettier"
+    ],
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "space-before-function-paren": "off",
+      "quotes": [
+        "off",
+        "single"
+      ]
+    }
   },
   "browserslist": [
     "> 1%",
