--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "vue": "^3.2.13",
     "vue-cookies": "^1.8.4",
     "vue-router": "^4.0.3",
+    "vue-sweetalert2": "^5.0.10",
     "vuex": "^4.0.0",
     "vuex-persistedstate": "^4.1.0"
   },
